istio/Gateway/istiogateway_https.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: application-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "saket.eastus.cloudapp.azure.com"
    tls:
      httpsRedirect: true  
  - port:
      number: 443
      name: https 
      protocol: HTTPS
    tls:
      mode: SIMPLE
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
      privateKey: /etc/istio/ingressgateway-certs/tls.key  
    hosts:
    - "saket.eastus.cloudapp.azure.com"
